cloudformation/3tier.yml
escription:  Full VPC Stack with 3 tiers and 2 subniets in each tier. 

 
 

Parameters: 

 
 

  EnvironmentName: 

    Description: An environment name that is prefixed to resource names 

    Type: String 

 
 

  VpcCIDR: 

    Description: Please enter the IP range (CIDR notation) for this VPC 

    Type: String 

    Default: 10.0.0.0/16 

 
 

  PublicSubnet1CIDR: 

    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone 

    Type: String 

    Default: 10.0.0.0/24 

 
 

  PublicSubnet2CIDR: 

    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone 

    Type: String 

    Default: 10.0.5.0/24 

 
 

  PrivateSubnet1CIDR: 

    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone 

    Type: String 

    Default: 10.0.10.0/24 

 
 

  PrivateSubnet2CIDR: 

    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone 

    Type: String 

    Default: 10.0.15.0/24 

 
 

  PrivateDBSubnet1CIDR: 

    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone 

    Type: String 

    Default: 10.0.20.0/24 

 
 

  PrivateDBSubnet2CIDR: 

    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone 

    Type: String 

    Default: 10.0.25.0/24 

Resources: 

  VPC: 

    Type: AWS::EC2::VPC 

    Properties: 

      CidrBlock: !Ref VpcCIDR 

      EnableDnsSupport: true 

      EnableDnsHostnames: true 

      Tags: 

        - Key: Name 

          Value: sprintqaVPC 

   

  InternetGateway: 

    Type: AWS::EC2::InternetGateway 

    Properties: 

      Tags: 

        - Key: Name 

          Value: sprintqaIGW 

 
 

  InternetGatewayAttachment: 

    Type: AWS::EC2::VPCGatewayAttachment 

    Properties: 

      InternetGatewayId: !Ref InternetGateway 

      VpcId: !Ref VPC 

  PublicSubnet1: 

    Type: AWS::EC2::Subnet 

    Properties: 

      VpcId: !Ref VPC 

      AvailabilityZone: !Select [ 0, !GetAZs '' ]   # us-east 1a 

      CidrBlock: !Ref PublicSubnet1CIDR 

      MapPublicIpOnLaunch: true 

      Tags: 

        - Key: Name 

          Value: !Sub ${EnvironmentName}-PublicSubnet1 

 
 

  PublicSubnet2: 

    Type: AWS::EC2::Subnet 

    Properties: 

      VpcId: !Ref VPC 

      AvailabilityZone: !Select [ 1, !GetAZs  '' ]    # us-east 1b 

      CidrBlock: !Ref PublicSubnet2CIDR 

      MapPublicIpOnLaunch: true 

      Tags: 

        - Key: Name 

          Value: !Sub ${EnvironmentName}-PublicSubnet2 

   

  PrivateSubnet1: 

    Type: AWS::EC2::Subnet 

    Properties: 

      VpcId: !Ref VPC 

      AvailabilityZone: !Select [ 0, !GetAZs  '' ]   # us-east 1a 

      CidrBlock: !Ref PrivateSubnet1CIDR 

      MapPublicIpOnLaunch: false     # disabling mapping public IP 

      Tags: 

        - Key: Name 

          Value: !Sub ${EnvironmentName}-PrivateSubnet1 

 
 

  PrivateSubnet2: 

    Type: AWS::EC2::Subnet 

    Properties: 

      VpcId: !Ref VPC 

      AvailabilityZone: !Select [ 1, !GetAZs  '' ]    # us-east 1b 

      CidrBlock: !Ref PrivateSubnet2CIDR 

      MapPublicIpOnLaunch: false 

      Tags: 

        - Key: Name 

          Value: !Sub ${EnvironmentName}-PrivateSubnet2 

 
 

  PrivateDBSubnet1: 

    Type: AWS::EC2::Subnet 

    Properties: 

      VpcId: !Ref VPC 

      AvailabilityZone: !Select [ 0, !GetAZs  '' ]   # us-east 1a 

      CidrBlock: !Ref PrivateDBSubnet1CIDR 

      MapPublicIpOnLaunch: false     # disabling mapping public IP 

      Tags: 

        - Key: Name 

          Value: !Sub ${EnvironmentName}-PrivateDBSubnet1 

 
 

  PrivateDBSubnet2: 

    Type: AWS::EC2::Subnet 

    Properties: 

      VpcId: !Ref VPC 

      AvailabilityZone: !Select [ 1, !GetAZs  '' ]    # us-east 1b 

      CidrBlock: !Ref PrivateDBSubnet2CIDR 

      MapPublicIpOnLaunch: false 

      Tags: 

        - Key: Name 

          Value: !Sub ${EnvironmentName}-PrivateDBSubnet2 

 
 
 

  NatGateway1EIP: 

    Type: AWS::EC2::EIP 

    DependsOn: InternetGatewayAttachment 

    Properties: 

      Domain: vpc 

 
 

  NatGateway2EIP: 

    Type: AWS::EC2::EIP 

    DependsOn: InternetGatewayAttachment 

    Properties: 

      Domain: vpc 

 
 

  NatGateway1: 

    Type: AWS::EC2::NatGateway 

    Properties: 

      AllocationId: !GetAtt NatGateway1EIP.AllocationId 

      SubnetId: !Ref PublicSubnet1 

 
 

  NatGateway2: 

    Type: AWS::EC2::NatGateway 

    Properties: 

      AllocationId: !GetAtt NatGateway2EIP.AllocationId 

      SubnetId: !Ref PublicSubnet2 

 
 

  PublicRouteTable: 

    Type: AWS::EC2::RouteTable 

    Properties: 

      VpcId: !Ref VPC 

      Tags: 

        - Key: Name 

          Value: !Sub ${EnvironmentName}-PublicRoutes 

 
 

  DefaultPublicRoute: 

    Type: AWS::EC2::Route 

    DependsOn: InternetGatewayAttachment 

    Properties: 

      RouteTableId: !Ref PublicRouteTable 

      DestinationCidrBlock: 0.0.0.0/0 

      GatewayId: !Ref InternetGateway 

 
 

  PublicSubnet1RouteTableAssociation: 

    Type: AWS::EC2::SubnetRouteTableAssociation 

    Properties: 

      RouteTableId: !Ref PublicRouteTable 

      SubnetId: !Ref PublicSubnet1 

 
 

  PublicSubnet2RouteTableAssociation: 

    Type: AWS::EC2::SubnetRouteTableAssociation 

    Properties: 

      RouteTableId: !Ref PublicRouteTable 

      SubnetId: !Ref PublicSubnet2 

   

  PrivateRouteTable1: 

    Type: AWS::EC2::RouteTable 

    Properties: 

      VpcId: !Ref VPC 

      Tags: 

        - Key: Name 

          Value: !Sub ${EnvironmentName}-PrivateRouteTable1 

  PrivateRouteTable2: 

    Type: AWS::EC2::RouteTable 

    Properties: 

      VpcId: !Ref VPC 

      Tags: 

        - Key: Name 

          Value: !Sub ${EnvironmentName}-PrivateRouteTable2 

 
 

  DefaultPrivateRoute1: 

    Type: AWS::EC2::Route 

    Properties: 

      RouteTableId: !Ref PrivateRouteTable1 

      DestinationCidrBlock: 0.0.0.0/0 

      NatGatewayId: !Ref NatGateway1 

   

  DefaultPrivateRoute2: 

    Type: AWS::EC2::Route 

    Properties: 

      RouteTableId: !Ref PrivateRouteTable2 

      DestinationCidrBlock: 0.0.0.0/0 

      NatGatewayId: !Ref NatGateway2 

   

  PrivateSubnet1RouteTableAssociation1: 

    Type: AWS::EC2::SubnetRouteTableAssociation 

    Properties: 

      RouteTableId: !Ref PrivateRouteTable1 

      SubnetId: !Ref PrivateSubnet1 

 
 

  PrivateSubnet1RouteTableAssociation2: 

    Type: AWS::EC2::SubnetRouteTableAssociation 

    Properties: 

      RouteTableId: !Ref PrivateRouteTable1 

      SubnetId: !Ref PrivateDBSubnet1 

 
 

  PrivateSubnet2RouteTableAssociation1: 

    Type: AWS::EC2::SubnetRouteTableAssociation 

    Properties: 

      RouteTableId: !Ref PrivateRouteTable2 

      SubnetId: !Ref PrivateSubnet2 

 
 

  PrivateSubnet2RouteTableAssociation2: 

    Type: AWS::EC2::SubnetRouteTableAssociation 

    Properties: 

      RouteTableId: !Ref PrivateRouteTable2 

      SubnetId: !Ref PrivateDBSubnet2
